<resources>
    <string-array name="available_countries">
        <item>@string/Romania</item>
        <item>@string/Germany</item>
        <item>@string/The_United_Kingdom</item>
    </string-array>
    <string-array name="available_reasons">
        <item>@string/home_isolation</item>
        <item>@string/elderly_person</item>
        <item>@string/time_shortage</item>
        <item>@string/locomotive_deficiency</item>
        <item>@string/unspecified</item>
    </string-array>
    <plurals name="number_of_articles">
        <item quantity="one">%d article</item>
        <item quantity="other">%d articles</item>
    </plurals>
    <string name="shop_assist" translatable="false">Shop Assist</string>
    <string name="log_in_screen" translatable="false">LOGIN SCREEN</string>
    <string name="log_in">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="address">Address</string>
    <string name="telephone_number">Telephone number</string>
    <string name="email">Email</string>
    <string name="title">title</string>
    <string name="password_recovery">Password recovery</string>
    <string name="birthday_date">Birthday date</string>
    <string name="hello">Hello</string>
    <string name="home">Home</string>
    <string name="cancel">Cancel</string>
    <string name="my_account">My account</string>
    <string name="log_out">Log out</string>
    <string name="login_not_successful">Login not successful</string>
    <string name="required_field">Required field</string>
    <string name="email_not_valid">The email is not valid</string>
    <string name="confirm">Confirm</string>
    <string name="PHRASE_password_recovery">In order to reset the password of your account, you must type in below the email of the account</string>
    <string name="back">Back</string>
    <string name="first_name_last_name">Firstname Surname</string>
    <string name="update_contact_info">Update contact information</string>
    <string name="availability_preferences">Availability preferences</string>
    <string name="completed_shopping_lists">Completed shopping lists</string>
    <string name="other_settings">Other settings</string>
    <string name="code_of_condcuct">Code of conduct</string>
    <string name="about_shop_assist">About Shop Assist</string>
    <string name="update">Update</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="city">City</string>
    <string name="street_and_number">Street name and number</string>
    <string name="Romania">Romania</string>
    <string name="Germany">Germany</string>
    <string name="The_United_Kingdom">The United Kingdom</string>
    <string name="PHRASE_create_account">Fill in bellow all the fields in order to create an account. Contact data, like telephone number and address, are necessary in order to keep you connected to the other users</string>
    <string name="field_should_not_be_empty">This field should not be empty</string>
    <string name="password_is_too_weak">Password is too weak</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="this_field_does_not_respect_the_standard_format">This field does not respect the standard format</string>
    <string name="country">Country</string>
    <string name="next_step">Next step</string>
    <string name="new_shopping_request">New shopping request</string>
    <string name="PHRASE_new_shopping_request">"In order to send a shopping request, you need to fill in the shopping list with all the required articles. Then select a bonus at choice and the reason of the shopping request. "</string>
    <string name="shopping_list">Shopping list</string>
    <string name="add_article">Add article</string>
    <string name="article">Article</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="new_shopping_list">New shopping list</string>
    <string name="PHRASE_no_requests_nearby">There are no shopping requests nearby at the moment. They will appear right here immediately they are requested</string>
    <string name="shopping_list_review">Shopping list review</string>
    <string name="PHRASE_shopping_list_review">Review all the details in the shopping list to check if they are correct. After sending the request, it will be visible for all the available users nearby, ready to be taken over</string>
    <string name="send_request">Send request</string>
    <string name="notes">Notes</string>
    <string name="delivery_bonus">Delivery bonus</string>
    <string name="PHRASE_err_invalid_shopping_list">Some articles in the shopping list seem to have an invalid input. Check all the articles to have the name, and the quantity written as a number. Write down at least one article</string>
    <string name="PHRASE_add_here_notes">Write in here any existing observations regarding the articles in the list or other shopping mentions</string>
    <string name="reason">Request reason</string>
    <string name="home_isolation">Home isolation</string>
    <string name="elderly_person">Elderly person</string>
    <string name="time_shortage">Time shortage</string>
    <string name="locomotive_deficiency">Locomotive disability</string>
    <string name="unspecified">Unspecified</string>
    <string name="PHRASE_available_requests_nearby">There are shopping requests available. You can choose any shopping request nearby you. Once you select it and take it over, you will be guided from the market to the door</string>
    <string name="hello_">Hello,</string>
    <string name="address_of_delivery">Delivery address</string>
    <string name="open">Open</string>
    <string name="account_updated">Account details successfully updated</string>
    <string name="there_was_nothing_to_update">There was nothing to update</string>
    <string name="no_field_should_be_empty">No field should be empty</string>
    <string name="call">Call</string>
    <string name="take_request">Take request</string>
    <string name="PHRASE_take_request">By taking the request you will provide the articles in the list and deliver them to the specified address</string>
    <string name="PHRASE_provider_info_home">As you find an article, tick it on the list. When you will have found everything available in the store, pay the articles and keep the receipts</string>
    <string name="shopping">Shopping</string>
    <string name="PHRASE_issuer_taken_info_home">%1$s had taken your request, being your provider. If you forgot to mention some observations, feel free to call the provider</string>
    <string name="the_request_is_taken">Your request has been taken</string>
    <string name="waiting_to_be_taken">Waiting to be taken</string>
    <string name="PHRASE_the_list_is_waiting_to_be_taken">Your request is visible for all the users, waiting to be taken by one of them</string>
    <string name="finish_shopping">Finish shopping</string>
    <string name="total_sum">Total sum</string>
    <string name="PHRASE_total_sum">Insert below the exact amount of money by summing up the receipts. <b>Do not include the bonus sum or the price for any unrequested product</b></string>
    <string name="begin_delivery">Begin delivery</string>
    <string name="keep_all_the_receipts">Keep and hand all the receipts at the delivery</string>
    <string name="the_sum_does_not_have_a_valid_format">The sum does not have a valid format</string>
    <string name="PHRASE_delivery_info">Now you can deliver the shopping bag. When you get at the delivery address, request the total sum displayed below and hand in the shopping and the receipts. Lastly, press <b>Finish delivery</b></string>
    <string name="on_delivery">On delivery</string>
    <string name="route">Route</string>
    <string name="finish_delivery">Finish delivery</string>
    <string name="PHRASE_delivery_info_by_issuer">The shopping is finished and it is now being delivered by %1$s. When the provider will come, request the receipts and check the total price. Hand in the total sum, which already includes the bonus amount, and receive the articles</string>
    <string name="The_shopping_is_being_delivered">The shopping is being delivered</string>
    <string name="view_receipts">View receipts</string>
    <string name="total_sum_to_pay">Total sum to pay</string>
    <string name="the_request_was_deleted">The request was deleted</string>
    <string name="do_you_want_to_delete_the_request">Do you want to delete the request?</string>
    <string name="delete">Delete</string>
    <string name="confirm_delivery">Confirm delivery</string>
    <string name="to_pay">To pay</string>
    <string name="delivery_completed">Delivery completed</string>
    <string name="PHRASE_confirm_delivery_by_issuer">%1$s set your request as being delivered. If you have checked the receipts, have taken the shopping articles and have handed the total sum to the provider, <b>confirm</b> the delivery</string>
    <string name="check_delivery">Check delivery</string>
    <string name="the_issuer_has_to_confirm_the_delivery">Confirmation expires in %1$s s</string>
    <string name="you_have_successfully_delivered_the_shopping_to">You have successfully delivered the shopping to %1$s</string>
    <string name="congratulations">Congratulations, %1$s!</string>
    <string name="shopping_is_done">Bye for now!</string>
    <string name="you_have_successfully_received_the_shopping_from">You have received the shopping bag from %1$s</string>
    <string name="PHRASE_call_if">You will be able to call the issuer at any step after you take the request. You can do this now, too, if you have some questions and you want to assist the issuer</string>
    <string name="PHRASE_begin_delivery">If you have finished all the shopping, you are ready to go</string>
    <string name="by_creating_an_account_you_agree_with_the_terms_and_conditions">By creating an account, you agree with the <b>Terms and conditions</b> and with the <b>Code of conduct</b></string>
    <string name="request_could_not_be_deleted">The request could not be deleted. Refresh the page</string>
</resources>