<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/txvw_alert_msg"
        style="@style/title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="start"
        android:text="@string/do_you_want_to_delete_the_request"
        android:textColor="@color/carbon"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end|center">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/button_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="5dp"
            android:textColor="@color/carbon" />

        <Button
            android:id="@+id/btn_proceed"
            style="@style/button_main_red"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>