<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyAccountActivity">

    <!--<ViewStub
        android:id="@+id/stub_import"
        android:inflatedId="@+id/scrollView"
        android:layout="@layout/view_stub_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>-->

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:paddingBottom="132dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txvw_firstname_lastname"
                style="@style/title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text=". . ."
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txvw_user_email_add_telnr"
                style="@style/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text=". . .\n. . .\n. . ."
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="20dp"
                tools:ignore="HardcodedText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_update_data"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:drawablePadding="10dp"
                android:text="@string/update_contact_info"
                app:icon="@drawable/ic_baseline_edit_24"
                app:iconTint="@color/magenta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_availability"
                style="@style/button_text"
                app:icon="@drawable/ic_baseline_remove_red_eye_24"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                app:iconTint="@color/magenta"
                android:text="@string/availability_preferences" />

            <Button
                android:id="@+id/btn_done_lists"
                style="@style/button_text"
                app:icon="@drawable/ic_baseline_playlist_add_check_24"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:iconTint="@color/magenta"
                android:text="@string/completed_shopping_lists" />

            <Button
                android:id="@+id/btn_other_settings"
                style="@style/button_text"
                app:icon="@drawable/ic_baseline_settings_24"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                app:iconTint="@color/magenta"
                android:text="@string/other_settings" />

            <Button
                android:id="@+id/btn_logout"
                style="@style/button_main_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/log_out" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:weightSum="1.0">

        <Button
            android:id="@+id/button_forgot_password"
            style="@style/button_gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/code_of_condcuct"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button_sign_up"
            style="@style/button_gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/about_shop_assist"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:background="#DDFFFFFF"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <Button
            android:id="@+id/btn_sys_back"
            style="@style/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:gravity="start|center"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txvw_title_top"
            style="@style/title_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:gravity="end"
            android:text="@string/my_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>